--- a/testing/sliding-sync-integration-test/Cargo.toml
+++ b/testing/sliding-sync-integration-test/Cargo.toml
@@ -12,3 +12,5 @@ matrix-sdk = { path = "../../crates/matrix-sdk", features = ["experimental-slidi
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
 futures = { version = "0.3.25" }
 uuid = { version = "1.2.2" }
+assert_matches = "1.5.0"
+futures-signals = { version = "0.3.30", default-features = false }
