feat(base,sdk,ui) Use the types from `http` instead of `ruma` directly.
This patch uses the types from `http` instead of `ruma` directly.

--- a/crates/matrix-sdk-base/Cargo.toml
+++ b/crates/matrix-sdk-base/Cargo.toml
@@ -26,6 +26,7 @@ experimental-sliding-sync = [
     "ruma/unstable-msc3575",
     "ruma/unstable-simplified-msc3575",
 ]
+experimental-simplified-sliding-sync = ["experimental-sliding-sync"]
 uniffi = ["dep:uniffi", "matrix-sdk-crypto?/uniffi"]
 
 # helpers for testing features build upon this
